--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,36 @@
 doctype html
-html
+html(lang='en')
     head
-        title= title
+        title #{title}
+        // TODO: Place latest bootstrap.min.css in {application root}/public/stylesheets
+        link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
         link(rel='stylesheet', href='/stylesheets/style.css')
     body
-        block content
+        .navbar.navbar-default(role='navigation')
+            .container
+                .navbar-header
+                    button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+                        span.sr-only Toggle navigation
+                        span.icon-bar
+                        span.icon-bar
+                        span.icon-bar
+                    a.navbar-brand(href='#') NodeAuth
+
+                .navbar-collapse.collapse
+                    ul.nav.navbar-nav
+                        li
+                            a(href='/') Home
+                        li
+                            a(href='/users/register') Register
+                        li
+                            a(href='/users/login') Login
+
+                    ul.nav.navbar-nav.navbar-right
+                        li
+                            a(href='/users/logout') Logout
+
+        .container
+            block content
+
+        script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+        script(src='javascripts/bootstrap.min.js')
