--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
     head
-        title #{title}
+        title= title
         // TODO: Place latest bootstrap.min.css in {application root}/public/stylesheets
         link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
         link(rel='stylesheet', href='/stylesheets/style.css')
@@ -33,4 +33,4 @@ html(lang='en')
             block content
 
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
-        script(src='javascripts/bootstrap.min.js')
+        script(src='/javascripts/bootstrap.min.js')
