--- a/views/register.pug
+++ b/views/register.pug
@@ -3,6 +3,9 @@ extends layout
 block content
     h2.page-header= title
     p Register a new account using the form below
+    if errors
+        each error, i in errors
+            div.alert.alert-danger #{error.msg}
 
     form(method='post', action='/users/register', enctype='multipart/form-data')
         .form-group
@@ -23,11 +26,11 @@ block content
 
         .form-group
             label Confirm Password
-            input.form-control(type='password', name='password-conf')
+            input.form-control(type='password', name='passconf')
 
         .form-group
             label Profile Picture
-            input.form-control(type='file', name='profile-img')
+            input.form-control(type='file', name='profilepic')
 
         input.btn.btn-primary(type='submit', name='submit', value='Register')
 
